--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
     <link rel="apple-touch-icon" href="favicon.png">
     <link rel="Shortcut Icon" href="favicon.png" type="image/x-icon">
     <title>基于vue的移动端UI库</title>
-    <script src="./node_modules/amfe-flexible/index.js"></script>
+    <script src="//g.alicdn.com/fdilab/lib3rd/viewport-units-buggyfill/0.6.2/??viewport-units-buggyfill.hacks.min.js,viewport-units-buggyfill.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+        window.onload = function () {
+          window.viewportUnitsBuggyfill.init({
+            hacks: window.viewportUnitsBuggyfillHacks
+          })
+        }
+      </script>
   </body>
 </html>
